--- a/_includes/main/header.html
+++ b/_includes/main/header.html
@@ -8,6 +8,7 @@
 
         <ul>
             <li><a href="{{ '/about' | prepend: site.baseurl }}">about</a></li>
+            <li><a href="{{ '/publications' | prepend: site.baseurl }}">publications</a></li>           
             <li><a href="{{ '/archive' | prepend: site.baseurl }}">archive</a></li>
         </ul>
     </div>
