--- a/_includes/main/header.html
+++ b/_includes/main/header.html
@@ -8,8 +8,10 @@
 
         <ul>
             <li><a href="{{ '/about' | prepend: site.baseurl }}">about</a></li>
-            <li><a href="{{ '/publications' | prepend: site.baseurl }}">publications</a></li>           
-            <li><a href="{{ '/archive' | prepend: site.baseurl }}">archive</a></li>
+            <li><a href="{{ '/research' | prepend: site.baseurl }}">research</a></li> 
+            <li><a href="{{ '/publications' | prepend: site.baseurl }}">publications</a></li> 
+
+            <!-- <li><a href="{{ '/archive' | prepend: site.baseurl }}">archive</a></li> -->
         </ul>
     </div>
     <div class="social">
