--- a/_includes/main/header.html
+++ b/_includes/main/header.html
@@ -3,7 +3,7 @@
       <div class="logo">
 
         <a href="{{ '/' | prepend: site.baseurl }}">{{ site.blog.title }}</a>
-        <object type="image/svg+xml" data="assets/img/bolt3-svgrepo-com.svg" class="logosvg">Your browser does not support svg images</object>
+        <object type="image/svg+xml" data="assets/img/bolt3-svgrepo-com.svg" class="logosvg"></object>
       </div>
 
         <ul>
